[gd_scene load_steps=15 format=2]

[ext_resource path="res://thief.gd" type="Script" id=1]
[ext_resource path="res://assets/Original/forestSprites_ v1.2/thief_.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 24, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 72, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4, 7.5 )

[node name="thief" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="look" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 10 )

[node name="thief_box" type="Area2D" parent="."]
collision_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="thief_box"]
position = Vector2( 0, 3.5 )
shape = SubResource( 10 )

[node name="dead_time" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="thief_box" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="dead_time" to="." method="_on_dead_time_timeout"]
